syntax = "proto3";

package model;

option java_package = "pl.piotr.michalowski.cryptoexchange.model";
option java_outer_classname = "CryptoProto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service CryptoService {
  rpc FindByName(google.protobuf.StringValue) returns (CryptoCurrency) {}
  rpc FindAll(google.protobuf.Empty) returns (CryptoCurrencies) {}
}

message CryptoCurrencies {
  repeated CryptoCurrency cryptos = 1;
}

message CryptoCurrency {
  string id = 1;
  string name = 2;
  double amount = 3;
  string targetCurrency = 4;
  string timestamp = 5;
}